@@ -1,63 +1,53 @@
-package ru.practicum.shareit.user.service;
+package ru.practicum.shareit.user;
 
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import org.springframework.util.StringUtils;
-import ru.practicum.shareit.common.exceptions.ConflictException;
-import ru.practicum.shareit.common.exceptions.NotFoundException;
-import ru.practicum.shareit.user.User;
-import ru.practicum.shareit.user.dto.UserDto;
-import ru.practicum.shareit.user.mapper.UserMapper;
-import ru.practicum.shareit.user.storage.InMemoryUserStorage;
+import ru.practicum.shareit.exception.NotFoundException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class UserServiceImpl implements UserService {
-    private final InMemoryUserStorage storage = new InMemoryUserStorage();
+
+    private final UserRepository userRepository;
 
     @Override
     public UserDto create(UserDto dto) {
-        if (!StringUtils.hasText(dto.getEmail())) {
-            throw new IllegalArgumentException("Email is required");
-        }
-        if (storage.emailExists(dto.getEmail(), null)) {
-            throw new ConflictException("Email already in use");
-        }
-        User saved = storage.save(UserMapper.fromDto(dto));
-        return UserMapper.toDto(saved);
+        User user = UserMapper.toUser(dto);
+        return UserMapper.toDto(userRepository.save(user));
     }
 
     @Override
-    public UserDto update(Long userId, UserDto patchDto) {
-        if (patchDto.getEmail() != null && storage.emailExists(patchDto.getEmail(), userId)) {
-            throw new ConflictException("Email already in use");
-        }
-        User patched = storage.updatePartial(userId, UserMapper.fromDto(patchDto));
-        if (patched == null) {
-            throw new NotFoundException("User not found: " + userId);
-        }
-        return UserMapper.toDto(patched);
+    public UserDto update(Long id, UserDto dto) {
+        User user = userRepository.findById(id)
+                .orElseThrow(() -> new NotFoundException("User not found"));
+
+        if (dto.getName() != null) user.setName(dto.getName());
+        if (dto.getEmail() != null) user.setEmail(dto.getEmail());
+
+        return UserMapper.toDto(userRepository.save(user));
     }
 
     @Override
     public UserDto get(Long id) {
-        return storage.findById(id)
+        return userRepository.findById(id)
                 .map(UserMapper::toDto)
-                .orElseThrow(() -> new NotFoundException("User not found: " + id));
+                .orElseThrow(() -> new NotFoundException("User not found"));
     }
 
     @Override
     public List<UserDto> getAll() {
-        return storage.findAll().stream()
+        return userRepository.findAll().stream()
                 .map(UserMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public void delete(Long id) {
-        storage.delete(id);
+        userRepository.deleteById(id);
     }
 }
+
 
 
